# scientificcomputing_bicocca_2025

./: .gitignore  README.md  new.txt  new_file.txt
.github/scripts/: search_name.py
.github/workflows/: auto-merge.yml  check_name.yml
working/: L01_ShoppingCart.ipynb  L01_TicTacToe.py  L03_matplotlib.ipynb  L04_scipy.ipynb  L05_mathematica.nb  L07_numba_multiprocessing.ipynb
working/DiegosTicTacToe/: LICENSE  README.md  pyproject.toml
working/DiegosTicTacToe/src/DiegosTicTacToe/: tictactoe.py
working/L06_git/: main.tex  main_diff.tex  title_page.tex  title_page_diff.tex  title_page_new.tex
working/TicTacToe/: README.md  setup.py
