[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DiegosTicTacToe"
version = "0.0.1"
authors = [
  { name="Diego Toniolo", email="d.toniolo4@campus.unimib.it" },
]
description = "A small class to play Tic Tac Toe"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
